fixing footer white space and padding

--- a/src/components/Copyright/Copyright.scss
+++ b/src/components/Copyright/Copyright.scss
@@ -3,4 +3,5 @@ small.copyright {
 	text-align: center;
 	color: inherit;
 	margin: 0 1em;
+	white-space: nowrap;
 }
