--- a/src/components/FinePrint/FinePrint.scss
+++ b/src/components/FinePrint/FinePrint.scss
@@ -20,6 +20,7 @@ ul.fine-print {
 			text-decoration: none;
 			font-size: 0.92em;
 			line-height: calc(#{$navbar-link-height} * #{$footer-anchor-height-factor});
+			white-space: nowrap;
 
 			&:hover {
 				color: rgba(#ffffff, 0.85);
