--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -6,8 +6,8 @@
 footer.main-footer {
 	position: sticky;
 	top: 100%;
-	left: 0;
-	padding: 1px 0 1em;
+	left: 0%;
+	padding: 1.2em 0 1em;
 	text-align: center;
 	color: rgba(#fff, $navbar-link-opacity);
 	background-color: $bg-accent-color;
